Fix card overflow

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -7,7 +7,7 @@
   border-radius: 9px;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 0.5rem;
   cursor: pointer;
 }
 
