--- a/src/styles/CardContainer.css
+++ b/src/styles/CardContainer.css
@@ -1,6 +1,6 @@
 .card-container {
   display: grid;
-  grid-template-columns: repeat(6, 310px);
+  grid-template-columns: repeat(6, 300px);
   grid-template-rows: auto / auto;
   gap: 1rem;
   padding: 0 1rem;
